--- a/dashboard/src/app/pages/dashboard/home/explorer/file-view/file/file.component.scss
+++ b/dashboard/src/app/pages/dashboard/home/explorer/file-view/file/file.component.scss
@@ -25,7 +25,7 @@
         }
     }
 
-    &:nth-child(n+10) .file-item.detail > .file-props > .hidden-panel {
+    &:nth-child(n+5) .file-item.detail > .file-props > .hidden-panel {
         top: -200%;
     }
 
